src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__series_details_ui__series_details_ui_tests__tests__snapshot_tests__series_details_ui_renders_episode_details_over_series_details.snap
---
source: src/ui/sonarr_ui/library/series_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Titl╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮      │        
        │Over│ Episodes │ History │ Manual Search                                                                                                    │      │        
        │Netw│──────╭  Episode Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮─────│      │        
        │Stat│   🏷  │ Details │ History │ File │ Manual Search                                                                                 │file │      │        
        │Genr│=> 🏷  │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│p    │      │        
        │Rati│      │Some episode details:                                                                                                     │     │      │        
        │Year│      │                                                                                                                          │     │      │        
        │Runt│      │                                                                                                                          │     │      │        
        │Path│      │                                                                                                                          │     │      │        
        │Qual│      │                                                                                                                          │     │      │        
        │Lang│      │                                                                                                                          │     │      │        
        │Moni│      │                                                                                                                          │     │      │        
        │Size│      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │    │      │                                                                                                                          │     │      │        
        │╭  S│      │                                                                                                                          │     │─────╮│        
        ││ Se│      │                                                                                                                          │     │     ││        
        ││───│      │                                                                                                                          │     │─────││        
        ││   │      │                                                                                                                          │     │     ││        
        ││=> │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      │                                                                                                                          │     │     ││        
        ││   │      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     │     ││        
        ││   │                                                                                                                                       │     ││        
        ││   ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
